--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ wgpu = "22.1"
 pollster = "0.3"
 bytemuck = { version = "1.16", features = [ "derive" ] }
 flume = "0.11"
+glam = "0.28.0"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
