--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ wgpu = "22.1"
 pollster = "0.3"
 bytemuck = { version = "1.16", features = [ "derive" ] }
 flume = "0.11"
-glam = "0.28.0"
+nalgebra = {version = "0.33.0", features = ["bytemuck"]}
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -29,3 +29,9 @@ web-sys = { version = "0.3", features = [
     "Window",
     "Element",
 ]}
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = 'abort'
