--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ cfg-if = "1"
 winit = { version = "0.29", features = ["rwh_05"] }
 env_logger = "0.10"
 log = "0.4"
-wgpu = "22.1"
+wgpu = { version = "22.1", features = ["webgl"]}
 pollster = "0.3"
 bytemuck = { version = "1.16", features = [ "derive" ] }
 flume = "0.11"
